--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@types/node": "^8.0.13",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
+    "@types/uuid": "^3.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "react-scripts-ts": "2.4.0"
