--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/jest": "^20.0.2",
     "@types/node": "^8.0.13",
+    "@types/node-fetch": "^1.6.7",
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/uuid": "^3.0.0",
+    "node-fetch": "^1.7.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "styled-components": "^2.1.1",
